tests/paczka2/big_fuzzy/15062835.err
Error in line 6: A771 A600 44,02
Error in line 1: A771 A771 82,8
Error in line 11: A771 A600 217,0
Error in line 14: DSeSTMq5 A771 11,2
Error in line 22: A771 A2 85,9
Error in line 16: 5lmu2o A771 219,9
Error in line 23: BgDm A771 22,9
Error in line 29: YbgTfEbDDn A771 58,4
Error in line 33: YbgTfEbDDn A600 37,2
Error in line 24: A771 A771 26,9
Error in line 37: A771 A112 75,6
Error in line 28: BgDm A2 12,6
Error in line 40: A771 A2 2,0
Error in line 36: uHpaWA A112 80,3
Error in line 47: DSeSTMq5 A112 50,9
Error in line 50: uHpaWA A2 95,7
Error in line 71: oCVhxZE0My A600 11,7
Error in line 73: oCVhxZE0My A771 2,3
Error in line 74: BgDm A2 138,7
Error in line 82: BgDm A600 23,18
Error in line 81: uHpaWA A112 10,8
Error in line 88: A771 A112 441,1
Error in line 56: YbgTfEbDDn A112 94,5
Error in line 85: BgDm A600 13,3
Error in line 97: uHpaWA A771 29,1
Error in line 106: YbgTfEbDDn A771 87,4
Error in line 103: DSeSTMq5 A771 42,4
Error in line 111: DSeSTMq5 A600 70,4
Error in line 108: YbgTfEbDDn A600 24,1
Error in line 116: YbgTfEbDDn A2 36,4
Error in line 115: DSeSTMq5 A771 7,0
Error in line 136: uHpaWA A112 39,4
Error in line 145: 5lmuIo A771 I9,4
Error in line 142: 5lmu2o A2 8,3
Error in line 147: YbgTfEbDDn A771 43,8
Error in line 149: YbgTfEbDDn A112 40,1
Error in line 151: YbgTfEbDDn A771 43,3
Error in line 172: oCVhxZE0My A2 34,3
Error in line 191: oCVhxZE0My A771 5,9
Error in line 190: DSeSTMq5 A771 90,0
Error in line 204: BgDm A112 83,36
Error in line 205: DSeSTMq5 A2 62,0
Error in line 210: A771 A2 20,8
Error in line 215: A771 A600 41,3
Error in line 212: oCVhxZE0My A771 52,4
Error in line 220: A771 A600 29,2
Error in line 234: A771 A112 58,03
Error in line 231: A771 A2 84,4
Error in line 228: YbgTfEbDDn A112 436,0
Error in line 213: BgDm A112 206,5
Error in line 235: A771 A112 158,6
Error in line 248: uHpaWA A771 88,3
